hidden classifiers and associations, fixed bugs in rendering after underlining text

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				<b>aggregation</b> o-<br>
 				<b>aggregation</b> o-&gt;<br>
 				<b>note</b> --<br>
+				<b>hidden</b> -/-<br>
 
 				<h2>Classifier types</h2>
 				[name]<br>
@@ -51,6 +52,7 @@
 				[&lt;input&gt; name]<br>
 				[&lt;sender&gt; name]<br>
 				[&lt;receiver&gt; name]<br>
+				[&lt;hidden&gt; name]<br>
 
 				<h2>Directives</h2>
 				#arrowSize: 1<br>
