fixed rendering glitch in Safari

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="A tool for drawing sassy UML diagrams based on syntax. Provides instant feedback and has a highly customizable styling.">
+<meta name="description" content="A tool for drawing sassy UML diagrams based on syntax. Provides instant feedback and has a customizable styling.">
 <title>nomnoml</title>
 <link rel="stylesheet" href="lib/boilerplate.css">
 <link rel="stylesheet" href="lib/normalize.css">
