Move lib/vector.js to nomnoml.vectorMath.js

--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
   <script src="../lib/underscore.skanaar.js"></script>
   <script src="../lib/dagre.min.js"></script>
   <script src="../lib/skanaar.canvas.js"></script>
-  <script src="../lib/vector.js"></script>
+  <script src="../nomnoml.vectorMath.js"></script>
   <script src="../nomnoml.jison.js"></script>
   <script src="../nomnoml.parser.js"></script>
   <script src="../nomnoml.layouter.js"></script>
