Concatenate nomnoml script using gulp

--- a/test/standalone.usecase.html
+++ b/test/standalone.usecase.html
@@ -6,8 +6,9 @@
   <link rel="shortcut icon" type="image/png" href="favicon.png">
   <script src="../lib/zepto.min.js"></script>
   <script src="../lib/underscore.js"></script>
-  <script src="../lib/underscore.skanaar.js"></script>
   <script src="../lib/dagre.min.js"></script>
+  <!--<script src="../dist/nomnoml.js"></script> for testing the distributable nomnoml script -->
+  <script src="../lib/underscore.skanaar.js"></script>
   <script src="../lib/skanaar.canvas.js"></script>
   <script src="../nomnoml.vectorMath.js"></script>
   <script src="../nomnoml.jison.js"></script>
