--- a/test/index.html
+++ b/test/index.html
@@ -11,8 +11,8 @@
 
   <script src="../lib/zepto.min.js"></script>
   <script src="../lib/underscore.js"></script>
-  <script src="../lib/underscore.skanaar.js"></script>
   <script src="../lib/dagre.min.js"></script>
+  <script src="../lib/_skanaar.js"></script>
   <script src="../lib/skanaar.canvas.js"></script>
   <script src="../nomnoml.vectorMath.js"></script>
   <script src="../nomnoml.jison.js"></script>
