--- a/test/standalone.usecase.html
+++ b/test/standalone.usecase.html
@@ -8,7 +8,7 @@
   <script src="../lib/underscore.js"></script>
   <script src="../lib/dagre.min.js"></script>
   <!--<script src="../dist/nomnoml.js"></script> for testing the distributable nomnoml script -->
-  <script src="../lib/underscore.skanaar.js"></script>
+  <script src="../lib/_skanaar.js"></script>
   <script src="../lib/skanaar.canvas.js"></script>
   <script src="../nomnoml.vectorMath.js"></script>
   <script src="../nomnoml.jison.js"></script>
