--- a/test/requirejs.usecase.html
+++ b/test/requirejs.usecase.html
@@ -4,10 +4,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>test nomnoml</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
-  <script src="../lib/zepto.min.js"></script>
   <script src="../lib/underscore.js"></script>
   <script src="../lib/dagre.min.js"></script>
-  <script src="../dist/nomnoml.js"></script>
+  <script src="lib/requirejs-2.1.17/require.js"></script>
 </head>
 <body>
     <script id="noml" type="text/plain">
@@ -32,9 +31,12 @@
     </script>
     <canvas id="target-canvas"></canvas>
     <script>
-        var canvas = document.getElementById('target-canvas');
-        var noml = document.getElementById('noml').innerHTML;
-        nomnoml.draw(canvas, noml);
+        require(['../dist/nomnoml'], function (nomnoml) {
+            console.log(nomnoml);
+            var canvas = document.getElementById('target-canvas');
+            var noml = document.getElementById('noml').innerHTML;
+            nomnoml.draw(canvas, noml);
+        });
     </script>
 </body>
 </html>
