--- a/test/requirejs.usecase.html
+++ b/test/requirejs.usecase.html
@@ -4,8 +4,6 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>test nomnoml</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
-  <script src="../lib/underscore.js"></script>
-  <script src="../lib/dagre.min.js"></script>
   <script src="lib/requirejs-2.1.17/require.js"></script>
 </head>
 <body>
@@ -31,6 +29,17 @@
     </script>
     <canvas id="target-canvas"></canvas>
     <script>
+        require.config({
+            baseUrl: '../lib',
+            paths: {
+                dagre: 'dagre.min'
+            },
+            shim: {
+                'dagre': {
+                    exports: 'dagre'
+                }
+            }
+        });
         require(['../dist/nomnoml'], function (nomnoml) {
             console.log(nomnoml);
             var canvas = document.getElementById('target-canvas');
