Turn to Bower dependencies and upgrade Dagre
Many things happen in this commit and they are all intermingled in ways
they are hard to separate.

 - Start using Bower for dependencies, reason being to make nomnoml itself
   a bower package.
 - Upgrade Dagre from 0.4.5 to 0.7.1, reason being that the older version
   wasn't a bower package and didn't support RequireJS, the new version
   has both of these features.
 - Switch from using Underscore to using Lo-Dash, because Dagre depends on
   Lo-Dash it was just nicer if nomnoml switched to that as well.

Known issues:

 - With the upgrade of Dagre the layout doesn't come out exactly the same.
   The upgrade also messes with the rendering of relation arrows.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<p>Nomnoml was made possible by the cool projects
 				<a target="_blank" href="http://zaach.github.io/jison/">jison</a>,
 				<a target="_blank" href="https://github.com/cpettitt/dagre">dagre</a>,
-				<a target="_blank" href="http://underscorejs.org">underscore</a>,
+				<a target="_blank" href="http://lodash.com">lodash</a>,
 				<a target="_blank" href="http://typicons.com/">typicons</a> ,
 				<a target="_blank" href="http://zeptojs.com/">zepto</a> and
 				<a target="_blank" href="http://ethanschoonover.com/solarized">solarized</a>.
@@ -220,8 +220,9 @@
 [<actor>Sailor] - [<usecase>shiver me;timbers]</script>
 
 	<script src="lib/zepto.min.js"></script>
-	<script src="lib/underscore.js"></script>
-	<script src="lib/dagre.min.js"></script>
+	<script src="bower_components/lodash/lodash.js"></script>
+	<script src="bower_components/graphlib/dist/graphlib.core.js"></script>
+	<script src="bower_components/dagre/dist/dagre.core.js"></script>
 	<script src="lib/_skanaar.js"></script>
 	<script src="lib/skanaar.canvas.js"></script>
 	<script src="nomnoml.vectorMath.js"></script>
