--- a/test/standalone.usecase.html
+++ b/test/standalone.usecase.html
@@ -5,8 +5,9 @@
   <title>test nomnoml</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
   <script src="../lib/zepto.min.js"></script>
-  <script src="../lib/underscore.js"></script>
-  <script src="../lib/dagre.min.js"></script>
+  <script src="../bower_components/lodash/lodash.js"></script>
+  <script src="../bower_components/graphlib/dist/graphlib.core.js"></script>
+  <script src="../bower_components/dagre/dist/dagre.core.js"></script>
   <script src="../dist/nomnoml.js"></script>
 </head>
 <body>
