--- a/test/requirejs.usecase.html
+++ b/test/requirejs.usecase.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>test nomnoml</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
-  <script src="lib/requirejs-2.1.17/require.js"></script>
+  <script src="../bower_components/requirejs/require.js"></script>
 </head>
 <body>
     <script id="noml" type="text/plain">
@@ -30,14 +30,16 @@
     <canvas id="target-canvas"></canvas>
     <script>
         require.config({
-            baseUrl: '../lib',
+            baseUrl: '../bower_components',
             paths: {
-                dagre: 'dagre.min'
+                dagre: 'dagre/dist/dagre.core',
+                graphlib: 'graphlib/dist/graphlib.core',
+                //underscore: 'lodash/lodash',
+                lodash: 'lodash/lodash'
             },
             shim: {
-                'dagre': {
-                    exports: 'dagre'
-                }
+                graphlib: ['lodash'],
+                dagre: ['graphlib', 'lodash']
             }
         });
         require(['../dist/nomnoml'], function (nomnoml) {
