panning and zooming now have some documentation

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 				<h2>Interaction</h2>
 
-				<p>Hover over the right hand third of the window allow you to pans and zoom the canvas.
+				<p>The canvas can be panned and zoomed by dragging and scrolling in the right hand third of the canvas. Downloaded image files will be given the filename in the <tt>#title</tt> directive.
 				</p>
 				
 				<hr>
