--- a/index.html
+++ b/index.html
@@ -221,10 +221,9 @@
 
 	<script src="lib/zepto.min.js"></script>
 	<script src="bower_components/lodash/lodash.js"></script>
-	<script src="bower_components/graphlib/dist/graphlib.core.js"></script>
-	<script src="bower_components/dagre/dist/dagre.core.js"></script>
 	<script src="lib/_skanaar.js"></script>
 	<script src="lib/skanaar.canvas.js"></script>
+	<script src="lib/dagre.min.js"></script>
 	<script src="nomnoml.vectorMath.js"></script>
 	<script src="nomnoml.jison.js"></script>
 	<script src="nomnoml.parser.js"></script>
