nomnoml title wrapped in a <h1>

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		<div id="linemarker"></div>
 
 		<div class="tools">
-			<a class="logo" href="javascript:void(0)" onclick="nomnoml.toggleSidebar('about')" title="About nomnoml">nomnoml &nbsp;</a>
+			<a class="logo" href="javascript:void(0)" onclick="nomnoml.toggleSidebar('about')" title="About nomnoml"><h1>nomnoml</h1> &nbsp;</a>
 			<a href="javascript:void(0)" onclick="nomnoml.toggleSidebar('about')" title="About nomnoml">
 				<img src="img/info-large.png">
 			</a>
