npm publishable package, build script

--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
 [<actor>Sailor] - [<usecase>shiver me;timbers]</script>
 
 	<script src="lib/zepto.min.js"></script>
-	<script src="bower_components/lodash/lodash.js"></script>
-	<script src="lib/_skanaar.js"></script>
-	<script src="lib/skanaar.canvas.js"></script>
+	<script src="lib/lodash.js"></script>
 	<script src="lib/dagre.min.js"></script>
-	<script src="nomnoml.vectorMath.js"></script>
+	<script src="skanaar.canvas.js"></script>
+	<script src="skanaar.util.js"></script>
+	<script src="skanaar.vector.js"></script>
 	<script src="nomnoml.jison.js"></script>
 	<script src="nomnoml.parser.js"></script>
 	<script src="nomnoml.layouter.js"></script>
