--- a/test/index.html
+++ b/test/index.html
@@ -10,12 +10,11 @@
   <script src="lib/jasmine-2.0.0/boot.js"></script>
 
   <script src="../lib/zepto.min.js"></script>
-  <script src="../bower_components/lodash/lodash.js"></script>
-  <script src="../bower_components/graphlib/dist/graphlib.core.js"></script>
-  <script src="../bower_components/dagre/dist/dagre.core.js"></script>
-  <script src="../lib/_skanaar.js"></script>
-  <script src="../lib/skanaar.canvas.js"></script>
-  <script src="../nomnoml.vectorMath.js"></script>
+  <script src="../lib/lodash.js"></script>
+  <script src="../lib/dagre.min.js"></script>
+  <script src="../skanaar.util.js"></script>
+  <script src="../skanaar.canvas.js"></script>
+  <script src="../skanaar.vector.js"></script>
   <script src="../nomnoml.jison.js"></script>
   <script src="../nomnoml.parser.js"></script>
   <script src="../nomnoml.layouter.js"></script>
