--- a/test/requirejs.usecase.html
+++ b/test/requirejs.usecase.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>test nomnoml</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
-  <script src="../bower_components/requirejs/require.js"></script>
+  <script src="../lib/require.js"></script>
 </head>
 <body>
     <script id="noml" type="text/plain">
@@ -30,10 +30,7 @@
     <canvas id="target-canvas"></canvas>
     <script>
         require.config({
-            baseUrl: '../bower_components',
-            paths: {
-                lodash: 'lodash/lodash'
-            }
+            baseUrl: '../lib'
         });
         require(['../dist/nomnoml'], function (nomnoml) {
             console.log(nomnoml);
