--- a/test/standalone.usecase.html
+++ b/test/standalone.usecase.html
@@ -5,8 +5,16 @@
   <title>test nomnoml</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
   <script src="../lib/zepto.min.js"></script>
-  <script src="../bower_components/lodash/lodash.js"></script>
-  <script src="../dist/nomnoml.js"></script>
+  <script src="../lib/lodash.js"></script>
+  <script src="../lib/dagre.min.js"></script>
+  <script src="../skanaar.util.js"></script>
+  <script src="../skanaar.canvas.js"></script>
+  <script src="../skanaar.vector.js"></script>
+  <script src="../nomnoml.jison.js"></script>
+  <script src="../nomnoml.parser.js"></script>
+  <script src="../nomnoml.layouter.js"></script>
+  <script src="../nomnoml.renderer.js"></script>
+  <script src="../nomnoml.js"></script>
 </head>
 <body>
     <script id="noml" type="text/plain">
