--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<canvas id="canvas"></canvas>
 		<textarea id="textarea" spellcheck="false"></textarea>
-		<textarea id="linenumbers" disabled></textarea>
+		<div id="linenumbers"></div>
 		<div id="canvas-panner"></div>
 
 		<div id="reference" class="sidebar">
