--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="lib/boilerplate.css">
 <link rel="stylesheet" href="lib/normalize.css">
 <link rel="stylesheet" href="codemirror/codemirror.css">
-<link rel="stylesheet" href="codemirror/theme/solarized.nomnoml.css">
+<link rel="stylesheet" href="codemirror/solarized.nomnoml.css">
 <link rel="stylesheet" href="nomnoml.css">
 <link rel="shortcut icon" href="favicon.png">
 </head>
@@ -225,6 +225,8 @@
 	<script src="lib/lodash.js"></script>
 	<script src="lib/dagre.min.js"></script>
 	<script src="skanaar.canvas.js"></script>
+	<script src="codemirror/codemirror-compressed.js"></script>
+	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
 	<script src="skanaar.util.js"></script>
 	<script src="skanaar.vector.js"></script>
 	<script src="nomnoml.jison.js"></script>
@@ -233,11 +235,6 @@
 	<script src="nomnoml.renderer.js"></script>
 	<script src="nomnoml.js"></script>
 	<script src="nomnoml.app.js"></script>
-	<script src="codemirror/codemirror-compressed.js"></script>
-	<script src="codemirror/mode.nomnoml.js"></script>
-	<!--script src="codemirror/lib/codemirror.js"></script-->
-	<!--script src="codemirror/keymap/sublime.js"></script-->
-	<!--script src="codemirror/addon/edit/matchbrackets.js"></script-->
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
