Fix wrong links to lodash.js in tests
Refer to the (only available) minified lodash file.

--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
   <script src="lib/jasmine-2.0.0/boot.js"></script>
 
   <script src="../lib/zepto.min.js"></script>
-  <script src="../lib/lodash.js"></script>
+  <script src="../lib/lodash.min.js"></script>
   <script src="../lib/dagre.min.js"></script>
   <script src="../skanaar.util.js"></script>
   <script src="../skanaar.canvas.js"></script>
