--- a/test/standalone.usecase.html
+++ b/test/standalone.usecase.html
@@ -5,7 +5,7 @@
   <title>test nomnoml</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
   <script src="../lib/zepto.min.js"></script>
-  <script src="../lib/lodash.js"></script>
+  <script src="../lib/lodash.min.js"></script>
   <script src="../lib/dagre.min.js"></script>
   <script src="../skanaar.util.js"></script>
   <script src="../skanaar.canvas.js"></script>
