--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
 	<script src="lib/lodash.min.js"></script>
 	<script src="lib/dagre.min.js"></script>
 	<script src="skanaar.canvas.js"></script>
+	<script src="skanaar.svg.js"></script>
 	<script src="codemirror/codemirror-compressed.js"></script>
 	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
 	<script src="skanaar.util.js"></script>
