<label> type for text-only nodes

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 				[&lt;receiver&gt; name]<br>
 				[&lt;actor&gt; name]<br>
 				[&lt;usecase&gt; name]<br>
+				[&lt;label&gt; name]<br>
 				[&lt;hidden&gt; name]<br>
 
 				<h2>Directives</h2>
