documentation for bracket escaping

--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 				<label>Car has some attributes</label>
 				[Car|maxSpeed: Float;color: Color|]
 
+				<label>Car has several valves</label>
+				[Car| valves: Valve\[\] ]
+
 				<label>Engine has an operation</label>
 				[Engine||start()]
 
