svg rendering work-in-progress

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<div class="wrap">
 
 		<canvas id="canvas"></canvas>
+		<div id="svg-host"></div>
 		<textarea id="textarea" spellcheck="false"></textarea>
 		<div id="linenumbers"></div>
 		<div id="canvas-panner"></div>
