reference classifier type with dashed frame

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				[&lt;abstract&gt; name]<br>
 				[&lt;instance&gt; name]<br>
 				[&lt;note&gt; name]<br>
+				[&lt;reference&gt; name]<br>
 				[&lt;package&gt; name]<br>
 				[&lt;frame&gt; name]<br>
 				[&lt;database&gt; name]<br>
