formalized classifier hull configuration

--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
 	<script src="skanaar.vector.js"></script>
 	<script src="nomnoml.jison.js"></script>
 	<script src="nomnoml.parser.js"></script>
+	<script src="nomnoml.visuals.js"></script>
 	<script src="nomnoml.layouter.js"></script>
 	<script src="nomnoml.renderer.js"></script>
 	<script src="nomnoml.js"></script>
