--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				[&lt;input&gt; name]<br>
 				[&lt;sender&gt; name]<br>
 				[&lt;receiver&gt; name]<br>
-				[&lt;transiver&gt; name]<br>
+				[&lt;transceiver&gt; name]<br>
 				[&lt;actor&gt; name]<br>
 				[&lt;usecase&gt; name]<br>
 				[&lt;label&gt; name]<br>
@@ -105,7 +105,7 @@
 				visual=roundrect<br>
 				visual=sender<br>
 				visual=start<br>
-				visual=transiver
+				visual=transceiver
 				
 				<label>Available modifiers are</label>
 
