Adds a "transceiver" visual combining "receiver" and "sender" in one stereotype (#61)
* Added a "transiver" visual which combines receiver and sender; made sender and receiver more visually pleasing

* typo fixed

* documentation update

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 				[&lt;input&gt; name]<br>
 				[&lt;sender&gt; name]<br>
 				[&lt;receiver&gt; name]<br>
+				[&lt;transceiver&gt; name]<br>
 				[&lt;actor&gt; name]<br>
 				[&lt;usecase&gt; name]<br>
 				[&lt;label&gt; name]<br>
@@ -103,8 +104,9 @@
 				visual=rhomb<br>
 				visual=roundrect<br>
 				visual=sender<br>
-				visual=start
-
+				visual=start<br>
+				visual=transceiver
+				
 				<label>Available modifiers are</label>
 
 				center<br>
