improved text measurement heuristics for SVG layout

--- a/test/standalone.svg.usecase.html
+++ b/test/standalone.svg.usecase.html
@@ -27,7 +27,13 @@
             [beard]-:>[foul mouth]
         ]
 
-        [<abstract>Marauder]<:--[Pirate]
+        [<abstract>iii]<:--[Pirate]
+        [<abstract>mmm]<:--[Pirate]
+        [<abstract>man]<:--[Pirate]
+        [<abstract>OOO]<:--[Pirate]
+        [<abstract>MMM]<:--[Pirate]
+        [<abstract>WWW]<:--[Pirate]
+        [<abstract>漢字漢字]<:--[Pirate]
         [Pirate]- 0..7[mischief]
         [<database>jollyness]->[Pirate]
         [jollyness]->[rum]
