Copy roundrect functionality to capsule

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 				visual=receiver<br>
 				visual=rhomb<br>
 				visual=roundrect<br>
+				visual=capsule<br>
 				visual=sender<br>
 				visual=start<br>
 				visual=transceiver
