Add borderRadius directive

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 				#stroke: #33322E<br>
 				#title: filename<br>
 				#zoom: 1<br>
+				#borderRadius: 5 <small>(For roundrect visuals)</small><br>
 
 				<h2>Custom classifier styles</h2>
 				<label>A directive that starts with "." define a classifier style.</label>
@@ -102,8 +103,8 @@
 				visual=package<br>
 				visual=receiver<br>
 				visual=rhomb<br>
-				visual=roundrect<br>
 				visual=capsule<br>
+				visual=roundrect<br>
 				visual=sender<br>
 				visual=start<br>
 				visual=transceiver
