Added html escaping of the text and a viewbox attribute to the svg export

--- a/test/standalone.svg.usecase.html
+++ b/test/standalone.svg.usecase.html
@@ -33,6 +33,7 @@
         [<abstract>OOO]<:--[Pirate]
         [<abstract>MMM]<:--[Pirate]
         [<abstract>WWW]<:--[Pirate]
+        [<abstract>ABC<T>]<:--[Pirate]
         [<abstract>漢字漢字]<:--[Pirate]
         [Pirate]- 0..7[mischief]
         [<database>jollyness]->[Pirate]
