upgrade lodash for node, use the smaller underscoreJS in webapp

--- a/index.html
+++ b/index.html
@@ -288,13 +288,12 @@
 
 [<actor>Sailor] - [<usecase>shiver me;timbers]</script>
 
-	<script src="lib/zepto.min.js"></script>
-	<script src="lib/lodash.min.js"></script>
+	<script src="lib/underscore.min.js"></script>
 	<script src="lib/dagre.min.js"></script>
-	<script src="skanaar.canvas.js"></script>
-	<script src="skanaar.svg.js"></script>
 	<script src="codemirror/codemirror-compressed.js"></script>
 	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
+	<script src="skanaar.canvas.js"></script>
+	<script src="skanaar.svg.js"></script>
 	<script src="skanaar.util.js"></script>
 	<script src="skanaar.vector.js"></script>
 	<script src="nomnoml.jison.js"></script>
