move code into a /src folder

--- a/test/index.html
+++ b/test/index.html
@@ -22,14 +22,14 @@
   <div id=testreport></div>
   <script src="../lib/underscore.min.js"></script>
   <script src="../lib/dagre.min.js"></script>
-  <script src="../skanaar.util.js"></script>
-  <script src="../skanaar.canvas.js"></script>
-  <script src="../skanaar.vector.js"></script>
-  <script src="../nomnoml.jison.js"></script>
-  <script src="../nomnoml.parser.js"></script>
-  <script src="../nomnoml.visuals.js"></script>
-  <script src="../nomnoml.layouter.js"></script>
-  <script src="../nomnoml.renderer.js"></script>
+  <script src="../src/skanaar.util.js"></script>
+  <script src="../src/skanaar.canvas.js"></script>
+  <script src="../src/skanaar.vector.js"></script>
+  <script src="../src/jison-parser.js"></script>
+  <script src="../src/parser.js"></script>
+  <script src="../src/visuals.js"></script>
+  <script src="../src/layouter.js"></script>
+  <script src="../src/renderer.js"></script>
   <script>
     function require(id) {
       return {
