--- a/index.html
+++ b/index.html
@@ -292,17 +292,17 @@
 	<script src="lib/dagre.min.js"></script>
 	<script src="codemirror/codemirror-compressed.js"></script>
 	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
-	<script src="skanaar.canvas.js"></script>
-	<script src="skanaar.svg.js"></script>
-	<script src="skanaar.util.js"></script>
-	<script src="skanaar.vector.js"></script>
-	<script src="nomnoml.jison.js"></script>
-	<script src="nomnoml.parser.js"></script>
-	<script src="nomnoml.visuals.js"></script>
-	<script src="nomnoml.layouter.js"></script>
-	<script src="nomnoml.renderer.js"></script>
-	<script src="nomnoml.js"></script>
-	<script src="nomnoml.app.js"></script>
+	<script src="src/skanaar.canvas.js"></script>
+	<script src="src/skanaar.svg.js"></script>
+	<script src="src/skanaar.util.js"></script>
+	<script src="src/skanaar.vector.js"></script>
+	<script src="src/jison-parser.js"></script>
+	<script src="src/parser.js"></script>
+	<script src="src/visuals.js"></script>
+	<script src="src/layouter.js"></script>
+	<script src="src/renderer.js"></script>
+	<script src="src/nomnoml.js"></script>
+	<script src="src/app.js"></script>
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
