Add classifier style test

--- a/test/index.html
+++ b/test/index.html
@@ -53,6 +53,7 @@
   </script>
   <script id="sample_source" type="text/plain">
       #zoom: 0.5
+      #.hello: underline
       [Pirate|
           [beard]--[parrot]
           [beard]-:>[foul mouth]
@@ -63,6 +64,7 @@
       [<abstract>ABC<T>]<:--[Pirate]
       [<abstract>漢字漢字]<:--[Pirate]
       [Pirate]- 0..7[mischief]
+      [Pirate] - [<hello>Arrrrrr]
       [<database>jollyness]->[Pirate]
       [jollyness]->[rum]
       [jollyness]->[Bucchaneer]
