--- a/index.html
+++ b/index.html
@@ -225,47 +225,175 @@
 			<div class="logo-background"></div>
 		</div>
 
+		<div id="export" class="sidebar">
+			<div class="content">
+				<a id="linkbutton" href="javascript:void(0)" target="_blank" title="Shareable link to this diagram">
+					<svg width="24" height="24" viewBox="0 0 24 24">
+						<path d="M18.3 6.3c-.5-.4-1.1-.4-1.6 0L15 8l-.3-.3a3.2 3.2 0 0 0-4.4 0L6.1 12a3 3 0 0 0 0 4.4l.3.3-1.7 1.7A1.1 1.1 0 1 0 6.3 20L8 18.2l.3.3c.6.5 1.4.9 2.2.9s1.6-.4 2.2-1l4.2-4.1c.5-.6.9-1.4.9-2.2s-.4-1.6-1-2.2l-.2-.3 1.7-1.7c.4-.5.4-1.1 0-1.6zm-3 6.4L11.1 17c-.1.2-.4.3-.6.3l-.6-.3-.3-.3.7-.7a1.1 1.1 0 1 0-1.6-1.6L8 15l-.3-.3c-.2-.1-.3-.4-.3-.6l.3-.6 4.2-4.2c.1-.2.4-.3.6-.3l.6.3.3.3-.7.7a1.1 1.1 0 1 0 1.6 1.6l.7-.7.3.3c.2.1.3.4.3.6l-.3.6z"/>
+					</svg> Open shareable link
+				</a><br/>
+
+				<a id="save-png-button" href="javascript:void(0)" download="nomnoml.png" title="Download snapshot of this diagram">
+					<svg width="24" height="24" viewBox="0 0 24 24">
+						<path d="M19 20H5a3 3 0 0 1-3-3V9a3 3 0 0 1 3-3h1.6l1-1c.6-.6 1.6-1 2.4-1h4c.8 0 1.8.4 2.4 1l1 1H19a3 3 0 0 1 3 3v8a3 3 0 0 1-3 3zM5 8a1 1 0 0 0-1 1v8c0 .6.4 1 1 1h14c.6 0 1-.4 1-1V9c0-.6-.4-1-1-1h-2a1 1 0 0 1-.7-.3L15 6.4c-.2-.2-.7-.4-1-.4h-4c-.3 0-.8.2-1 .4L7.7 7.7A1 1 0 0 1 7 8H5zm7 2a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5m0-1a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zm6-.3a1.3 1.3 0 1 0 0 2.6 1.3 1.3 0 0 0 0-2.6z"/>
+					</svg> Download PNG
+				</a><br/>
+
+				<a id="save-svg-button" href="javascript:void(0)" download="nomnoml.svg" title="Download vectorized diagram">
+					<svg width="24" height="24" viewBox="0 0 24 24">
+						<circle cx="8.5" cy="8.5" r="2.5"/>
+						<path d="M16 10c-2 0-3 3-4.5 3S10 12 8 12s-3 4-3 4h14s-1-6-3-6zm4-7H4a2 2 0 0 0-2 2v12c0 1.1.9 2 2 2h16a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2zm0 14H4V5h16v12z"/>
+					</svg> Download SVG
+				</a><br/>
+
+				<a id="save-source-button" href="javascript:void(0)" download="diagram.nomnoml" title="Download source">
+					<svg version="1.2" baseProfile="tiny" width="24" height="24" viewBox="0 0 24 24">
+						<path d="M19.7 7.3l-4-4A1 1 0 0 0 15 3H7a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8a1 1 0 0 0-.3-.7zm-2.1.7h-1.1c-.8 0-1.5-.7-1.5-1.5v-1L17.6 8zM17 19H7a1 1 0 0 1-1-1V6c0-.6.4-1 1-1h7v1.5C14 7.9 15.1 9 16.5 9H18v9c0 .6-.4 1-1 1z"/>
+					</svg> Download source
+				</a>
+			</div>
+		</div>
+
 		<div id="linemarker"></div>
 
 		<div class="tools">
-			<a class="logo" href="javascript:void(0)" onclick="nomnoml.toggleSidebar('about')" title="About nomnoml"><h1>nomnoml</h1> &nbsp;</a>
-			<a href="javascript:void(0)" onclick="nomnoml.toggleSidebar('about')" title="About nomnoml">
+			<a class="logo" href="javascript:void(0)" onclick="app.toggleSidebar('about')" title="About nomnoml"><h1>nomnoml</h1> &nbsp;</a>
+			<a href="javascript:void(0)" onclick="app.toggleSidebar('about')" title="About nomnoml">
 				<img src="img/info-large.png">
 			</a>
-			<a href="javascript:void(0)" onclick="nomnoml.toggleSidebar('reference')" title="Language reference">
+			<a href="javascript:void(0)" onclick="app.toggleSidebar('reference')" title="Language reference">
 				<img src="img/book.png">
 			</a>
-			<a id="savebutton" href="javascript:void(0)" download="nomnoml.png" title="Download snapshot of this diagram">
-				<img src="img/camera.png">
+			<a href="javascript:void(0)" onclick="app.toggleSidebar('export')" title="Export diagram">
+				<img src="img/download.png">
 			</a>
-			<a id="linkbutton" href="javascript:void(0)" target="_blank" title="Shareable link to this diagram">
-				<img src="img/link.png">
-			</a>
-			<a href="javascript:nomnoml.discardCurrentGraph()" title="Discard this diagram">
+			<a href="javascript:app.discardCurrentGraph()" title="Discard this diagram">
 				<img src="img/trash.png">
 			</a>
 			<span id="tooltip"></span>
 			<span id="storage-status">
 				View mode, changes are not saved.
-				<a href="javascript:nomnoml.saveViewModeToStorage()"
+				<a href="javascript:app.saveViewModeToStorage()"
 				   title="Save this diagram to localStorage">save</a>
-				<a href="javascript:nomnoml.exitViewMode()"
+				<a href="javascript:app.exitViewMode()"
 				   title="Discard this diagram">close</a>
 			</span>
 
 			<div class="canvas-tools" id="canvas-tools">
-				<a href="javascript:nomnoml.magnifyViewport(2)" title="Zoom in">
+				<a href="javascript:app.magnifyViewport(2)" title="Zoom in">
 					<img src="img/plus.png">
 				</a>
-				<a href="javascript:nomnoml.resetViewport()" title="Reset zoom and panning">
+				<a href="javascript:app.resetViewport()" title="Reset zoom and panning">
 					<img src="img/equals.png">
 				</a>
-				<a href="javascript:nomnoml.magnifyViewport(-2)" title="Zoom out">
+				<a href="javascript:app.magnifyViewport(-2)" title="Zoom out">
 					<img src="img/minus.png">
 				</a>
 			</div>
 		</div>
+
+		<div class="commercial-title" id="commercial-title">
+			<div class="commercial-dismiss" onclick="closeCommercial()">&times;</div>
+			<a href="https://itunes.apple.com/se/app/nebula-sky/id1268430694&mt=8">
+				<img src="commercial/appstore.svg">
+				I have made a game,<br/>try Nebula Sky now!
+			</a>
+		</div>
+		<div class="commercial show1" id="commercial" onclick="cycleCommercial()">
+			<div class="commercial-shadowcaster"></div>
+			<img class="commercial-frame" src="commercial/iphone-frame.png">
+			<img class="commercial-screen screen0" src="commercial/menu.png">
+			<img class="commercial-screen screen1" src="commercial/radar.png">
+			<img class="commercial-screen screen2" src="commercial/shipyard.png">
+			<img class="commercial-screen screen3" src="commercial/surface.png">
+		</div>
 	</div>
+
+	<script>
+		var commercialPage = 0
+		function closeCommercial() {
+			document.getElementById('commercial').style.bottom = '-230px';
+			document.getElementById('commercial-title').style.bottom = '-100px';
+		}
+		function cycleCommercial() {
+			commercialPage += 1
+			var elem = document.getElementById('commercial')
+			elem.classList.remove('show0')
+			elem.classList.remove('show1')
+			elem.classList.remove('show2')
+			elem.classList.remove('show3')
+			elem.classList.add('show' + (commercialPage % 4))
+		}
+		setInterval(cycleCommercial, 10000)
+	</script>
+	<style>
+		.commercial-dismiss {
+			text-align: right;
+			cursor: pointer;
+			font-size: 22px;
+			color: #807C72;
+		}
+		.commercial-title {
+			z-index: 3;
+			box-sizing: border-box;
+			position: absolute;
+			right: 20px;
+			bottom: 145px;
+			width: 250px;
+			padding: 5px;
+			font-family: sans-serif;
+			font-size: 12px;
+			color: #807C72;
+			transition: bottom 1s;
+		}
+		.commercial-title a, .commercial-title a:hover, .commercial-title a:active, .commercial-title a:visited {
+			text-decoration: none;
+			color: #586e75;
+		}
+		.commercial-title img {
+			width: 80px;
+			float: right;
+		}
+		.commercial {
+			z-index: 3;
+			position: absolute;
+			right: 20px;
+			bottom: 20px;
+			width: 250px;
+			height: 125px;
+			cursor: pointer;
+			transition: bottom 1s;
+		}
+		.commercial-frame {
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 250px;
+			height: 125px;
+		}
+		.commercial-screen {
+			position: absolute;
+			left: 32px;
+			top: 10px;
+			width: 185px;
+			height: 105px;
+			opacity: 0;
+			transition: opacity 0.8s;
+		}
+		.show0 .screen0, .show1 .screen1, .show2 .screen2, .show3 .screen3 {
+			opacity: 1;
+		}
+		.commercial-shadowcaster {
+			position: absolute;
+			left: 3px;
+			top: 4px;
+			width: 244px;
+			height: 117px;
+			background: black;
+			border-radius: 15px;
+			box-shadow: 0 5px 20px rgba(0,0,0,.2);
+		}
+	</style>
 
 	<script type="text/vnd.nomnoml.class" id="defaultGraph">[Pirate|eyeCount: Int|raid();pillage()|
   [beard]--[parrot]
