--- a/index.html
+++ b/index.html
@@ -128,9 +128,8 @@
 				<p>Nomnoml was made possible by the cool projects
 				<a target="_blank" href="http://zaach.github.io/jison/">jison</a>,
 				<a target="_blank" href="https://github.com/cpettitt/dagre">dagre</a>,
-				<a target="_blank" href="http://lodash.com">lodash</a>,
+				<a target="_blank" href="https://underscorejs.org">underscore</a>,
 				<a target="_blank" href="http://typicons.com/">typicons</a> ,
-				<a target="_blank" href="http://zeptojs.com/">zepto</a>, 
 				<a target="_blank" href="https://codemirror.net/">codemirror</a> and
 				<a target="_blank" href="http://ethanschoonover.com/solarized">solarized</a>.
 				</p>
@@ -229,7 +228,7 @@
 			<div class="content">
 				<a id="linkbutton" href="javascript:void(0)" target="_blank" title="Shareable link to this diagram">
 					<svg width="24" height="24" viewBox="0 0 24 24">
-						<path d="M18.3 6.3c-.5-.4-1.1-.4-1.6 0L15 8l-.3-.3a3.2 3.2 0 0 0-4.4 0L6.1 12a3 3 0 0 0 0 4.4l.3.3-1.7 1.7A1.1 1.1 0 1 0 6.3 20L8 18.2l.3.3c.6.5 1.4.9 2.2.9s1.6-.4 2.2-1l4.2-4.1c.5-.6.9-1.4.9-2.2s-.4-1.6-1-2.2l-.2-.3 1.7-1.7c.4-.5.4-1.1 0-1.6zm-3 6.4L11.1 17c-.1.2-.4.3-.6.3l-.6-.3-.3-.3.7-.7a1.1 1.1 0 1 0-1.6-1.6L8 15l-.3-.3c-.2-.1-.3-.4-.3-.6l.3-.6 4.2-4.2c.1-.2.4-.3.6-.3l.6.3.3.3-.7.7a1.1 1.1 0 1 0 1.6 1.6l.7-.7.3.3c.2.1.3.4.3.6l-.3.6z"/>
+						<path d="M17.5 6c.3 0 .6.1.8.3.4.5.4 1.1 0 1.6l-1.7 1.7.3.3c.5.6.9 1.4.9 2.2s-.4 1.6-1 2.2l-4.1 4.2c-.6.5-1.4.9-2.2.9s-1.6-.4-2.2-1l-.3-.2-1.7 1.7a1 1 0 0 1-1.6 0c-.4-.5-.4-1.1 0-1.6l1.7-1.7-.3-.3c-.5-.6-.9-1.4-.9-2.2s.4-1.6 1-2.2l4.1-4.2c.6-.5 1.4-.8 2.2-.8s1.6.3 2.2.8l.3.3 1.7-1.7c.2-.2.5-.3.8-.3m0-2a3 3 0 0 0-2.2 1l-.5.4a5.2 5.2 0 0 0-5.9 1l-4.2 4a5 5 0 0 0-1 6l-.4.5a3 3 0 0 0 0 4.4 3 3 0 0 0 4.4 0l.5-.5a5 5 0 0 0 5.9-1l4.2-4a5 5 0 0 0 1-6l.4-.5a3 3 0 0 0 0-4.4 3 3 0 0 0-2.2-.9zm-6.1 7.2a2 2 0 0 0 2 2L11.6 15a2 2 0 0 0-2-2l1.8-1.8M12.5 9c-.2 0-.5.1-.6.3l-4.2 4.2c-.2.1-.3.4-.3.6 0 .2.1.5.3.6l.3.3.7-.7a1 1 0 0 1 1.6 0c.4.5.4 1.1 0 1.6l-.7.7.3.3c.1.2.4.3.6.3l.6-.3 4.2-4.2c.2-.1.3-.4.3-.6 0-.2-.1-.5-.3-.6l-.3-.3-.7.7a1 1 0 0 1-1.6 0c-.4-.5-.4-1.1 0-1.6l.7-.7-.3-.3a.9.9 0 0 0-.6-.3z"/>
 					</svg> Open shareable link
 				</a><br/>
 
@@ -259,13 +258,15 @@
 		<div class="tools">
 			<a class="logo" href="javascript:void(0)" onclick="app.toggleSidebar('about')" title="About nomnoml"><h1>nomnoml</h1> &nbsp;</a>
 			<a href="javascript:void(0)" onclick="app.toggleSidebar('about')" title="About nomnoml">
-				<img src="img/info-large.png">
+				<svg width="24" height="24" viewBox="0 0 24 24">
+					<path d="M14.2 16l.6-1c.8-1.7.9-3.3.2-4.6a4 4 0 0 0-.4-.7 4 4 0 1 0-5-1.6 6.7 6.7 0 0 0-3 1.4A2 2 0 0 0 7.9 13l-.6 1c-.8 1.7-.9 3.3-.2 4.6.5 1.2 1.6 2 3 2.3a6.3 6.3 0 0 0 5.3-1.4 2 2 0 0 0-1-3.5zM13 4a2 2 0 1 1 0 4 2 2 0 0 1 0-4zm-1.8 15h-.9C8.7 18.5 8 17 9 15l1-2c.5-1 .5-1.6-.1-2-.2-.2-.4-.2-.7-.2L8 11s1.1-1 2.8-1h.9c1.6.4 2.3 2 1.3 4l-1 2c-.5 1-.5 1.6.1 2 .2.2.4.2.7.2L14 18s-1.1 1-2.8 1z"/>
+				</svg>
 			</a>
 			<a href="javascript:void(0)" onclick="app.toggleSidebar('reference')" title="Language reference">
 				<img src="img/book.png">
 			</a>
-			<a href="javascript:void(0)" onclick="app.toggleSidebar('export')" title="Export diagram">
-				<img src="img/download.png">
+			<a href="javascript:void(0)" onclick="app.toggleSidebar('export')" title="Export this diagram">
+				<svg version="1.2" baseProfile="tiny" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 21.312l-7.121-7.121c-1.17-1.17-1.17-3.073 0-4.242 1.094-1.094 2.978-1.138 4.121-.115v-4.834c0-1.654 1.346-3 3-3s3 1.346 3 3v4.834c1.143-1.023 3.027-.979 4.121.115 1.17 1.169 1.17 3.072 0 4.242l-7.121 7.121zm-5-10.242c-.268 0-.518.104-.707.293-.391.39-.391 1.023 0 1.414l5.707 5.707 5.707-5.707c.391-.391.391-1.024 0-1.414-.379-.379-1.035-.379-1.414 0l-3.293 3.293v-9.656c0-.551-.448-1-1-1s-1 .449-1 1v9.656l-3.293-3.293c-.189-.189-.439-.293-.707-.293z"/></svg>
 			</a>
 			<a href="javascript:app.discardCurrentGraph()" title="Discard this diagram">
 				<img src="img/trash.png">
