--- a/index.html
+++ b/index.html
@@ -80,14 +80,22 @@
 				#zoom: 1<br>
 
 				<h2>Custom classifier styles</h2>
-				<label>A directive that starts with "." define a classifier style.</label>
+				<label>A directive that starts with "." define a classifier style. The style is written as a space separated list of modifiers and key/value pairs.</label>
 
 				#.box: fill=#8f8 dashed<br>
 				#.blob: visual=ellipse<br>
 				[&lt;box&gt; GreenBox]<br>
 				[&lt;blob&gt; HideousBlob]
 
-				<label>Available visuals are</label>
+				<label>Available key/value pairs are</label>
+
+				fill=(any css color)<br><br>
+
+				align=center<br>
+				align=left<br><br>
+
+				direction=right<br>
+				direction=down<br><br>
 
 				visual=actor<br>
 				visual=class<br>
@@ -109,7 +117,6 @@
 				
 				<label>Available modifiers are</label>
 
-				center<br>
 				bold<br>
 				underline<br>
 				italic<br>
