--- a/test/index.html
+++ b/test/index.html
@@ -36,46 +36,46 @@
   <h1>Distribution bundle test</h1>
   <iframe src="standalone.usecase.html"></iframe>
 
-  <script id="label_test_source" type="text/plain">
-      #zoom: 0.5
-      #direction: right
-      #padding: 0
-      #arrowSize: 0.2
-      #spacing: 120
-      #edgeMargin: 5
-      [Left] left`association <-> right`association [Central 1]
-      [Left] left`association <-> right`association [Central 2]
-      [Left] left`association <-> right`association [Central 3]
-      [Central 1] left`association <-> right`association [Right]
-      [Central 2] left`association <-> right`association [Right]
-      [Central 3] left`association <-> right`association [Right]
-      
-      [Central 1] self <-> [Central 1]     
+  <script id="label_test_source" type="text/vnd.nomnoml.class">
+#zoom: 0.5
+#direction: right
+#padding: 0
+#arrowSize: 0.2
+#spacing: 120
+#edgeMargin: 5
+[Left] left`association <-> right`association [Central 1]
+[Left] left`association <-> right`association [Central 2]
+[Left] left`association <-> right`association [Central 3]
+[Central 1] left`association <-> right`association [Right]
+[Central 2] left`association <-> right`association [Right]
+[Central 3] left`association <-> right`association [Right]
+
+[Central 1] self <-> [Central 1]     
   </script>
-  <script id="sample_source" type="text/plain">
-      #zoom: 0.5
-      #font: Arial
-      #.hello: underline
-      [Pirate|
-          [beard]--[parrot]
-          [beard]-:>[foul mouth]
-      ]
-      [<abstract>iii]<:--[Pirate]
-      [<abstract>mmm]<:--[Pirate]
-      [<abstract>MMM]<:--[Pirate]
-      [<abstract>ABC<T>]<:--[Pirate]
-      [<abstract>漢字漢字]<:--[Pirate]
-      [Pirate]- 0..7[mischief]
-      [Pirate] - [<hello>Arrrrrr]
-      [<database>jollyness]->[Pirate]
-      [jollyness]->[rum]
-      [jollyness]->[Bucchaneer]
-      [Pirate]-> *[rum]
-      [Bucchaneer|eyeCount: Int|raid();pillage()]<->[rum]
-      [<start>st]->[<state>plunder]
-      [plunder]->[<choice>more loot]
-      [more loot]->[st]
-      [more loot] no ->[<end>e]
+  <script id="sample_source" type="text/vnd.nomnoml.class">
+#zoom: 0.5
+#font: Arial
+#.hello: underline
+[Pirate|
+    [beard]--[parrot]
+    [beard]-:>[foul mouth]
+]
+[<abstract>iii]<:--[Pirate]
+[<abstract>mmm]<:--[Pirate]
+[<abstract>MMM]<:--[Pirate]
+[<abstract>ABC<T>]<:--[Pirate]
+[<abstract>漢字漢字]<:--[Pirate]
+[Pirate]- 0..7[mischief]
+[Pirate] - [<hello>Arrrrrr]
+[<database>jollyness]->[Pirate]
+[jollyness]->[rum]
+[jollyness]->[Bucchaneer]
+[Pirate]-> *[rum]
+[Bucchaneer|eyeCount: Int|raid();pillage()]<->[rum]
+[<start>st]->[<state>plunder]
+[plunder]->[<choice>more loot]
+[more loot]->[st]
+[more loot] no ->[<end>e]
   </script>
 
   <script src="../lib/underscore.min.js"></script>
