--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@
 
 	<script src="lib/underscore.min.js"></script>
 	<script src="lib/dagre.min.js"></script>
+	<script src="lib/filesaver.min.js"></script>
 	<script src="codemirror/codemirror-compressed.js"></script>
 	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
 	<script src="src/skanaar.canvas.js"></script>
