removing direct lodash/underscore dependency

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 [<actor>Sailor] - [<usecase>shiver me;timbers]</script>
 
 	<script src="lib/underscore.min.js"></script>
-	<script src="lib/dagre.min.js"></script>
+	<script src="lib/dagre.js"></script>
 	<script src="lib/filesaver.min.js"></script>
 	<script src="codemirror/codemirror-compressed.js"></script>
 	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
