--- a/test/standalone.usecase.html
+++ b/test/standalone.usecase.html
@@ -4,8 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>test nomnoml</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
-  <script src="../lib/underscore.min.js"></script>
-  <script src="../lib/dagre.min.js"></script>
+  <script src="../lib/dagre.js"></script>
   <script src="../dist/nomnoml.js"></script>
 </head>
 <body>
