--- a/test/index.html
+++ b/test/index.html
@@ -203,17 +203,7 @@
   </div>
 
 
-  <script src="../lib/dagre.js"></script>
-  <script src="../src/skanaar.util.js"></script>
-  <script src="../src/skanaar.canvas.js"></script>
-  <script src="../src/skanaar.svg.js"></script>
-  <script src="../src/skanaar.vector.js"></script>
-  <script src="../src/jison-parser.js"></script>
-  <script src="../src/parser.js"></script>
-  <script src="../src/visuals.js"></script>
-  <script src="../src/layouter.js"></script>
-  <script src="../src/renderer.js"></script>
-  <script src="../src/nomnoml.js"></script>
+  <script src="../dist/nomnoml.web.js"></script>
   <script>
     function require(id) {
       return {
